[gd_scene load_steps=3 format=1]

[ext_resource path="res://Rektangulo.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[node name="Rektangulo" type="Area2D"]

transform/scale = Vector2( 3, 3 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 3
script/script = ExtResource( 1 )

[node name="Aspekto" type="Polygon2D" parent="."]

transform/rot = 15.0
polygon = Vector2Array( 10, -17, -10, -17, -10, 17, 10, 17 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Kasxi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_enter" from="." to="." method="_on_Rektangulo_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_Rektangulo_body_enter"]

[connection signal="tween_complete" from="Kasxi" to="." method="_on_Kasxi_tween_complete"]


